--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -7,6 +7,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.18
-      - run: go test -race -coverprofile=coverage.txt -covermode=atomic
+          go-version: 1.22
+      - run: go test -race -coverprofile=cover.out -covermode=atomic ./codec/... ./internal/...
       - uses: codecov/codecov-action@v3
+        with:
+          file: cover.out
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+          verbose: true
