--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.16.x, 1.17.x, 1.18.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        go-version: [1.22.x]
+        os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
